--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
 
 * {
     margin: 0px;
@@ -9,6 +17,8 @@
 html, body {
     background-color: darkgray;
     min-height: 100vh;
+    font-family: var(--fonte1);
+    font-size: 1em;
 }
 
 header {
@@ -20,6 +30,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps; 
+    font-family: var(--fonte2);
+    font-size: 12vw;
 }
 
 header > p {
@@ -42,6 +54,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 32px;
+    font-family: var(--fonte3);
+    font-size: 3.8vw;
 }
 
 .normal {
@@ -56,7 +70,8 @@ section {
 
 .imagem > p {
     background-color: rgba(0, 0, 0, 0.225);
-    width: 350px;
+    display: inline-block;
+    padding: 5px;
 }
 
 footer {
