--- a/estilo/style.css
+++ b/estilo/style.css
@@ -58,6 +58,10 @@ section {
     font-size: 3.8vw;
 }
 
+section > p {
+    padding-bottom: 1.6em;
+}
+
 .normal {
     background-color: white;
     color: black;
@@ -66,14 +70,26 @@ section {
 .imagem {
     background-color: rgb(62, 59, 59);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.431);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .imagem > p {
-    background-color: rgba(0, 0, 0, 0.225);
+    background-color: rgba(0, 0, 0, 0.568);
     display: inline-block;
     padding: 5px;
+    text-shadow: 2px 2px 0px black;
 }
 
+#img1 {
+    background-image: url(../arquivos/imagens/background001.jpg);
+    background-position: right center;
+}
+
+#img2 {
+    background-image: url(../arquivos/imagens/background002.jpg);
+}
 footer {
     background-color: black;
     color: white;
